--- a/wiki/MooplusSapshot.wiki
+++ b/wiki/MooplusSapshot.wiki
@@ -2,20 +2,20 @@
 
 = First Snapshot of Moo-plus =
 
-Afater the design process the project is now lunched and this is the first screenshot .
+After the design process the project is now lunched and this is the first screenshot .
 
 
 = Details =
 
-I will be updation as long as it goes<br/> 
+I will be updating as long as it goes<br/> 
 
 
 
 <img src="http://lh3.ggpht.com/_fFQl_ef5IGI/S7JPjIQs2fI/AAAAAAAAAEs/MetmaH2MfT4/s800/Sans%20titre-1.jpg" />
 
 
-I am happy announced that the developement process is going well for now . 
-after three days from the start of the developement process here is the second screen shot; with 5 controls developped and integrated.<br/>
+I am happy to announce that the developement process is going well for now . 
+after three days from the start of the developement process here is the second screenshot; with 5 controls developped and integrated.<br/>
 
 <img src="http://lh6.ggpht.com/_fFQl_ef5IGI/S7VE6DagnYI/AAAAAAAAAFs/X4B1u-wl9oI/s800/screenshot2.png" />
 
