--- a/Moo/Properties/Resources.resx
+++ b/Moo/Properties/Resources.resx
@@ -304,4 +304,34 @@
   <data name="send_bug" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\send_bug.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="class_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\class-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="constant_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\constant-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="enum_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enum-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="event_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\event-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="function_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\function-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="method_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\method-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="namespace_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\namespace-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="structure_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\structure-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="var_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\var-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="keyword_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\keyword-icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
